reorganized files for netlify deployment

--- a/account.html
+++ b/account.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Website</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/pricing.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="account.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,48 +53,59 @@
                     <i class="fa-solid fa-star"></i>
                     <span>All Features</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-boxes-stacked"></i>
                     <span>100+ Elements</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-file"></i>
                     <span>1000+ Layouts</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-pen-nib"></i>
                     <span>No-code Design</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-wrench"></i>
-                    <span>Theme Builder</span>
+                    <span>Theme builder</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <span>Ecommerce</span>
+                    <span>Ecommerence</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-network-wired"></i>
                     <span>Workflow</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-lightbulb"></i>
                     <span>Marketing</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-code"></i>
                     <span>Developers</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-desktop"></i>
                     <span>Site Examples</span>
                   </div>
+
                   <div class="features-list-item">
                     <i class="fa-solid fa-gears"></i>
                     <span>Integrations</span>
                   </div>
                 </div>
               </div>
+
               <div class="dropdown-1-right">
                 <h3>Services</h3>
                 <div class="dropdown-services">
@@ -105,13 +116,15 @@
                       <span>The #1 Theme Builder</span>
                     </div>
                   </div>
+
                   <div class="dropdown-service">
                     <i class="fa-solid fa-lightbulb"></i>
                     <div class="dropdown-service-item">
                       <span>Marketplace</span>
-                      <span>Modules, layouts, Themes</span>
+                      <span>Modules, Layouts, Themes</span>
                     </div>
                   </div>
+
                   <div class="dropdown-service">
                     <i class="fa-solid fa-cloud"></i>
                     <div class="dropdown-service-item">
@@ -119,6 +132,7 @@
                       <span>Cloud Storage for Designers</span>
                     </div>
                   </div>
+
                   <div class="dropdown-service">
                     <i class="fa-solid fa-brain"></i>
                     <div class="dropdown-service-item">
@@ -126,13 +140,15 @@
                       <span>Build Websites with AI</span>
                     </div>
                   </div>
+
                   <div class="dropdown-service">
                     <i class="fa-solid fa-people-group"></i>
                     <div class="dropdown-service-item">
                       <span>Teams</span>
-                      <span>Collaboration for Agencies</span>
+                      <span>Collaboration for agencies</span>
                     </div>
                   </div>
+
                   <div class="dropdown-service">
                     <i class="fa-solid fa-globe"></i>
                     <div class="dropdown-service-item">
@@ -140,6 +156,7 @@
                       <span>Fast Hosting of the Websites</span>
                     </div>
                   </div>
+
                   <div class="dropdown-service">
                     <i class="fa-solid fa-crown"></i>
                     <div class="dropdown-service-item">
@@ -152,6 +169,7 @@
               </div>
             </div>
           </li>
+
           <li class="nav-item">
             <a href="clients.html" class="nav-link">Clients</a>
             <!-- Dropdown 2 -->
@@ -160,36 +178,44 @@
                 <i class="fa-regular fa-envelope"></i>
                 <h3>Web Design Agencies</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
-                  tempore sed praesentium?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolores aliquid, assumenda maiores obcaecati placeat
+                  veritatis.
                 </p>
               </div>
+
               <div class="clients-item">
                 <i class="fa-solid fa-earth-americas"></i>
                 <h3>Online Store Owners</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
-                  tempore sed praesentium?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolores aliquid, assumenda maiores obcaecati placeat
+                  veritatis.
                 </p>
               </div>
+
               <div class="clients-item">
                 <i class="fa-brands fa-sketch"></i>
                 <h3>Web Design Freelancers</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
-                  tempore sed praesentium?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolores aliquid, assumenda maiores obcaecati placeat
+                  veritatis.
                 </p>
               </div>
+
               <div class="clients-item">
                 <i class="fa-solid fa-store"></i>
                 <h3>Small Business Owners</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, at porro natus
-                  tempore sed praesentium?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolores aliquid, assumenda maiores obcaecati placeat
+                  veritatis.
                 </p>
               </div>
             </div>
           </li>
+
           <li class="nav-item">
             <a href="products.html" class="nav-link">Products</a>
             <!-- Dropdown 3 -->
@@ -199,9 +225,10 @@
                   <i class="fa-solid fa-wrench"></i>
                   <div>
                     <span>Theme & Page Builder</span>
-                    <span>The #1 Theme and Visual Page Builder</span>
+                    <span>The #1 Theme and Visual Page</span>
                   </div>
                 </div>
+
                 <div class="product">
                   <i class="fa-solid fa-file"></i>
                   <div>
@@ -209,6 +236,7 @@
                     <span>Themes and Layouts</span>
                   </div>
                 </div>
+
                 <div class="product">
                   <i class="fa-solid fa-book-open"></i>
                   <div>
@@ -216,13 +244,15 @@
                     <span>The Best Theme for Blogger</span>
                   </div>
                 </div>
+
                 <div class="product">
                   <i class="fa-solid fa-envelope"></i>
                   <div>
                     <span>Bloom Email Opt-ins</span>
-                    <span>The Ultimate Email Opt-in Plugin</span>
+                    <span>The Ultimate Email Opt-in</span>
                   </div>
                 </div>
+
                 <div class="product">
                   <i class="fa-solid fa-hashtag"></i>
                   <div>
@@ -234,6 +264,7 @@
               <button type="button">Join to Download</button>
             </div>
           </li>
+
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
             <!-- Dropdown 4 -->
@@ -243,30 +274,35 @@
                   <i class="fa-solid fa-envelope"></i>
                   <span>Get in Touch</span>
                 </div>
+
                 <div>
                   <i class="fa-solid fa-comments"></i>
                   <span>Chat with Sales</span>
                 </div>
+
                 <div>
                   <i class="fa-solid fa-user"></i>
                   <span>Accounts & Bills</span>
                 </div>
+
                 <div>
                   <i class="fa-solid fa-wrench"></i>
                   <span>Technical Support</span>
                 </div>
+
                 <div>
                   <i class="fa-solid fa-people-group"></i>
                   <span>Ask the Community</span>
                 </div>
+
                 <div>
                   <i class="fa-solid fa-file-lines"></i>
                   <span>Documentation</span>
                 </div>
               </div>
-              <button type="button">Chat with Us</button>
             </div>
           </li>
+
           <li class="nav-item">
             <a href="account.html" class="nav-link">Account</a>
             <!-- Dropdown 5 -->
@@ -274,100 +310,54 @@
               <form class="account-form">
                 <div class="account-input-group">
                   <input type="text" placeholder="Username" />
-                  <input type="password" placeholder="Password" />
+                  <input type="text" placeholder="Password" />
                 </div>
                 <div class="check">
                   <input type="checkbox" id="check" />
                   <label for="check">Remember Me</label>
                 </div>
                 <button type="button">Member Login</button>
-                <p>Forgot Your <span>Username</span> or <span>Password</span>?</p>
+                <p>
+                  Forgot Your <span>Username</span> or <span>Password?</span>
+                </p>
               </form>
             </div>
           </li>
+
           <li class="nav-item">
             <a href="pricing.html" class="nav-btn">Pricing</a>
           </li>
         </ul>
       </nav>
 
-      <!-- Pricing -->
-      <section class="pricing">
-        <div class="pricing-wrapper">
-          <div class="pricing-shapes">
-            <div class="pricing-rectangle"></div>
-            <div class="pricing-small-circle"></div>
-            <div class="pricing-large-circle"></div>
+      <!-- Account -->
+      <section class="account">
+        <div class="account-wrapper">
+          <div class="account-circle"></div>
+          <div class="account-header">
+            <h1>Members Space</h1>
+            <h3>Manage your account, download products and chat us 24/7</h3>
           </div>
-          <div class="pricing-header">
-            <h1>Simple Pricing</h1>
-            <h1>Complete Access. Unlimited Websites</h1>
-            <h3>
-              Join 100,000+ customers and get access to unlimited websites. Modern themes and
-              plugins. The ultimate website builder
-            </h3>
-            <div class="reviews">
-              <p>Excellent</p>
-              <div class="pricing-stars">
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
-                <span class="material-symbols-rounded"> star </span>
+          <div class="account-form-wrapper">
+            <span class="material-symbols-rounded"> person_check </span>
+            <form>
+              <div class="account-inputs">
+                <input type="text" placeholder="Username" />
+                <input type="password" placeholder="Password" />
               </div>
-              <p>reviews on</p>
-              <div class="pricing-trustpilot">
-                <span class="material-symbols-rounded"> hotel_class </span>
-                <span>Trustpilot</span>
+              <div class="account-check">
+                <input type="checkbox" id="account-check" />
+                <label for="account-check">Remember Me</label>
               </div>
-            </div>
+              <button type="button">Log In</button>
+              <p>
+                Forgout your <span>Username</span> or <span>Password</span>?
+              </p>
+            </form>
           </div>
-          <div class="pricing-cards">
-            <div class="pricing-card pricing-card-left">
-              <div class="pricing-card-top">
-                <h3>Yearly Access</h3>
-                <h1>$99.99</h1>
-                <div class="pricing-card-stars">
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                </div>
-              </div>
-              <ul class="pricing-card-list">
-                <li>Hundreds of Website Packs</li>
-                <li>Product Updates</li>
-                <li>Premium Support</li>
-                <li>Unlimited Website Usage</li>
-                <li>Risk Free Guarantee</li>
-                <li>One Time Fee</li>
-              </ul>
-              <button type="button" class="pricing-card-btn">Sign Up Today</button>
-            </div>
-            <div class="pricing-card pricing-card-right">
-              <div class="pricing-card-top">
-                <h3>Lifetime Access</h3>
-                <h1>$249.99</h1>
-                <div class="pricing-card-stars">
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                  <span class="material-symbols-rounded"> hotel_class </span>
-                </div>
-              </div>
-              <ul class="pricing-card-list">
-                <li>Hundreds of Website Packs</li>
-                <li>Lifetime Product Updates</li>
-                <li>Lifetime Premium Support</li>
-                <li>Unlimited Website Usage</li>
-                <li>Risk Free Guarantee</li>
-                <li>One Time Fee</li>
-              </ul>
-              <button type="button" class="pricing-card-btn">Sign Up Today</button>
-            </div>
-          </div>
+          <button type="button" class="btn-out">
+            Not a member yet? Join Today!
+          </button>
         </div>
       </section>
 
@@ -423,6 +413,6 @@
         </div>
       </footer>
     </div>
-    <script src="../JS/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
