--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Website</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/contact.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="contact.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -39,7 +39,7 @@
           <div class="line line-1"></div>
           <div class="line line-2"></div>
         </div>
-        
+
         <!-- Nav Items -->
         <ul class="nav-items">
           <li class="nav-item">
@@ -429,6 +429,6 @@
         </div>
       </footer>
     </div>
-    <script src="../JS/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
